Implemented update~create action while retrieving raid stats